fix panning "jump" when trying to view pan after or during scaling the viewport implement rudimentary element styling (Monke <3)

--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -5,7 +5,8 @@
     src: url(../fonts/JetBrainsMono-Regular.ttf);
 }
 :root {
-    --var-outline-width : 5px;
+    --outline-scale: 1.0;
+    --var-outline-width : 2px;
     --var-selection-rect-inactive : all;
     --var-font-regular : "JetBrains Mono";
     --var-font-handwritten : "Covered By Your Grace";
